--- a/Front/src/Components/Dados/DadosFiltros.module.css
+++ b/Front/src/Components/Dados/DadosFiltros.module.css
@@ -34,3 +34,9 @@
   background: white;
   box-shadow: 0 0 0 2px #fb1;
 }
+
+@media (max-width: 520px) {
+  .container label {
+    width: 100px;
+  }
+}
