--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -2,22 +2,22 @@
   max-width: 1200px;
   display: flex;
   flex-direction: column;
-  /*min-height: calc(100vh + 10rem);*/
   margin: 0 auto;
 }
 
 .title {
- font-size: 4rem;
+ font-size: 2.5rem;
  line-height: 1;
  position: relative;
  z-index: 1;
+ color: #444;
 }
 
 .title::after {
   content: '';
   display: block;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 0.8rem;
+  height: 0.8rem;
   background: #fb1;
   position: absolute;
   bottom: 5px;
