--- a/Front/src/Components/Form/Input.module.css
+++ b/Front/src/Components/Form/Input.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .label {
@@ -10,14 +10,15 @@
 }
 
 .input {
-  height: 20px;
+  min-height: 2.2rem;
   border: 1px solid #888;
-  border-radius: .4rem;
+  border-radius: 15px;
   width: 100%;
   padding: .3rem;
   font-size: 1rem;
-  background: #ddd;
+  background: #dedede;
   transition: .2s;
+  box-sizing: border-box;
 }
 
 .input:hover, .input:focus {
