--- a/Front/src/Components/Login/Login.module.css
+++ b/Front/src/Components/Login/Login.module.css
@@ -1,9 +1,25 @@
 .section {
-  margin-top: 2rem;
+  max-width: 400px;
+  margin: 80px auto 0px;
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr;
   justify-content: center;
-  justify-items: center;
-  align-items: center;
-  gap: 3rem;
+}
+
+.section img {
+  justify-self: center;
+}
+
+.conteudo {
+  margin-top: 50px;
+  padding: 10px;
+  border: 2px solid #ddd;
+  border-radius: 10px;
+}
+
+@media (max-width: 520px) {
+  .section {
+    max-width: 280px;
+  }
 }
