Adicionado componente compras

--- a/Front/src/Components/Dados/DadosFiltros.module.css
+++ b/Front/src/Components/Dados/DadosFiltros.module.css
@@ -1,8 +1,9 @@
 .container {
-  padding: 1rem 2rem;
+  margin: 18px 20px 0px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 15px;
+  box-sizing: border-box;
 }
 
 .container div {
