Adicionado o prompt de cliente

--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -1,3 +1,14 @@
+body.modal-open {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 2000; /* Colocado abaixo do modal */
+  overflow: hidden;
+}
+
 .mainContainer {
   max-width: 1200px;
   display: flex;
